# demo-bot-rust

./: Cargo.toml  Makefile
core/: Cargo.toml
core/src/: db.rs  error.rs  lib.rs  models.rs
core/src/services/: bot.rs  mod.rs  worker.rs
main/: Cargo.toml
main/src/: main.rs
server/: Cargo.toml
