[package]
name = "core"
version = "0.1.0"
authors = ["Max Block <maxblock@pm.me>"]
edition = "2018"

[dependencies]
mongodb = {version = "1.1.1", default-features = false, features = ["sync"]}
serde = {version = "1.0.116", features = ["derive"]}
chrono = { version = "0.4.19", features = ["serde"] }
url = "2.1.1"